--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             <input type="color" name="colorPicker" />
             <label for="colorPicker"> Pick a Color</label>
           </div>
+          <button class="randomColor">Random Color</button>
+          <button class="erase">Erase</button>
+          <div class="sizePicker">
+            <p id="size">Size</p>
+            <input
+              id="pickedSize"
+              type="range"
+              name="pickedSize"
+              min="1"
+              max="64"
+              value="16"
+            />
+          </div>
         </div>
         <div class="sketchPad"></div>
       </div>
