set up the color picker

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
       <h1 class="mainTitle">Etch A Sketch</h1>
       <div class="container">
         <div class="settings">
-          <div class="colorPicker">
-            <input type="color" name="colorPicker" />
-            <label for="colorPicker"> Pick a Color</label>
-          </div>
+          <input id="colorPicker" type="color" name="colorPicker" />
           <button class="randomColor">Random Color</button>
           <button class="erase">Erase</button>
           <div class="sizePicker">
