Style the color picker

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <h1 class="mainTitle">Etch A Sketch</h1>
       <div class="container">
         <div class="settings">
-          <input id="colorPicker" type="color" name="colorPicker" />
+          <div class="colorBlock">
+            <input id="colorPicker" type="color" name="colorPicker" />
+            <label for="colorPicker">Color Picker</label>
+          </div>
+
           <button class="randomColor">Random Color</button>
           <button class="erase">Erase</button>
           <div class="sizePicker">
