Set up random function

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
             <input id="colorPicker" type="color" name="colorPicker" />
             <label for="colorPicker">Color Picker</label>
           </div>
-
-          <button class="randomColor">Random Color</button>
-          <button class="erase">Erase</button>
+          <button id="randomColor">Random Color</button>
+          <button id="erase">Erase</button>
           <div class="sizePicker">
             <p id="size">Size</p>
             <input
